# sui-token-gen

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  test_script.sh
config/: default.toml
rpc/: Cargo.toml  README.md  expanded.rs  expanded_lib.rs  run_client.sh
rpc/src/: client.rs  lib.rs  server.rs
rpc/src/Templates/: token_template.move
rpc/src/templates/: test_token_template.move  token_template.move
rpc/src/utils/: errors.rs  generation.rs  helpers.rs  mod.rs  variables.rs  verify_helper.rs
src/: error_handler.rs  errors.rs  lib.rs  main.rs  rpc_client.rs  success_handler.rs  test_utils.rs  variables.rs
src/commands/: create.rs  mod.rs  verify.rs
src/handlers/: mod.rs  success.rs
src/rpc/: mod.rs
src/rpc/server/: mod.rs
src/rpc/tests/: error_scenarios.rs  helpers.rs  mod.rs
src/rpc/tests/client/: mod.rs
src/rpc/tests/fixtures/: invalid_token.move  network_responses.rs  token_config.rs  valid_token.move
src/rpc/tests/integration/: mod.rs
src/rpc/tests/server/: mod.rs
src/rpc_client/: mod.rs
src/templates/: token_template.move
src/templates/move/: token.move.template
src/templates/toml/: Move.toml.template
src/test_tokens/: invalid_token.move  valid_token.move
src/tests/: command_tests.rs  error_handling_tests.rs  integration_tests.rs  mod.rs  other_tests.rs  rpc_connection_tests.rs  success_handler_tests.rs  token_command_tests.rs  validation_tests.rs
src/tests/common/: mod.rs  test_utils.rs
src/tests/tokens/: invalid_token.move  invalid_toml.toml  valid_token.move  valid_toml.toml
src/utils/: atomic.rs  constants.rs  create.rs  files.rs  generation.rs  helpers.rs  mod.rs  prompts.rs  verify_helper.rs
src/utils/client/: mod.rs  responses.rs  rpc_client.rs
test_token/: Move.toml
test_token/sources/: test_token.move
tests/: error_scenarios.rs  integration_tests.rs  test_token_server.rs
