[package]
name = "suitokengentest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
inquire = "=0.0.7"
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }
git2 = "0.17"
anyhow = "1.0.94"
thiserror = "2.0.4"
tarpc = { version = "0.35", features = ["full"] }
async-trait = "0.1.83"

[dev-dependencies]
tokio-test = "0.4"
async-std = { version = "1.0", features = ["attributes", "tokio1"] }
