[package]
name = "sui-token-gen"
version = "0.1.1"
edition = "2021"
description = "A Rust-based CLI tool for generating and verifying Sui token smart contracts effortlessly."
license = "MIT"
repository = "https://github.com/otter-sec/sui-token-gen"
homepage = "https://github.com/otter-sec/sui-token-gen"
documentation = "https://docs.rs/sui-token-gen"

[dependencies]
tokio = { version = "1", features = ["full"] }
inquire = "=0.0.7"
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
regex = "1.11.1"
clap = { version = "4.5.21", features = ["derive"] }
git2 = "0.19.0"
anyhow = "1.0.94"
thiserror = "2.0.4"
tarpc = { version = "0.35", features = ["full"] }
async-trait = "0.1.83"
colored = "2.0"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "5.0.1"

[dev-dependencies]
tokio-test = "0.4"
async-std = { version = "1.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.83"
