[package]
name = "sui-token-gen"
version = "0.1.5"
edition = "2021"
description = "A Rust-based CLI tool for generating and verifying Sui token smart contracts effortlessly."
license = "MIT"
repository = "https://github.com/otter-sec/sui-token-gen"
homepage = "https://github.com/otter-sec/sui-token-gen"
documentation = "https://docs.rs/sui-token-gen"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.0"
git2 = "0.19.0"
inquire = "=0.0.7"
once_cell = "1.20.3"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.35", features = ["full"] }
tera = "1.20"
thiserror = "2.0.4"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
async-std = { version = "1.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.83"
tokio-test = "0.4"
