[package]
name = "tarpc-example-service"
version = "0.16.0"
rust-version = "1.65.0"
authors = ["Tim Kuehn <tikue@google.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/tarpc-example-service"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "microservices", "example"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
description = "An example server built on tarpc."

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
futures = "0.3"
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = "0.26.0"
rand = "0.8"
tarpc = { version = "0.35", features = ["full", "server"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.16.0"
tera = "1.20"
toml = "0.8.19"
chrono = "0.4.38"
inquire = "=0.0.7"
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
reqwest = "0.12.9"
git2 = "0.17"
thiserror = "2.0.4"
async-trait = "0.1.83"
suitokengentest = { path = ".." }
tempfile = "3.10.1"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
